--- a/package.json
+++ b/package.json
@@ -33,60 +33,60 @@
     "index.d.ts"
   ],
   "devDependencies": {
-    "@formatjs/intl": "^1.4.8",
-    "@formatjs/intl-datetimeformat": "^3.0.0",
-    "@formatjs/intl-getcanonicallocales": "^1.5.1",
-    "@formatjs/intl-locale": "^2.4.11",
-    "@formatjs/intl-numberformat": "^6.1.1",
-    "@formatjs/intl-pluralrules": "^4.0.1",
-    "css-loader": "^3.2.0",
-    "es6-set": "^0.1.5",
-    "eslint": "^4.19.1",
-    "eslint-config-tui": "^1.0.3",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-jasmine": "^2.10.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "got": "^11.8.2",
-    "handlebars": "^4.7.6",
-    "handlebars-template-loader": "^1.0.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^2.99.1",
-    "jsdoc": "^3.5.5",
-    "karma": "^6.3.14",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage": "^2.0.3",
-    "karma-fixture": "^0.2.6",
-    "karma-html2js-preprocessor": "^1.1.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-ajax": "^0.1.13",
-    "karma-jasmine-jquery-2": "^0.1.1",
+    "@formatjs/intl": "1.4.8",
+    "@formatjs/intl-datetimeformat": "3.0.0",
+    "@formatjs/intl-getcanonicallocales": "1.5.1",
+    "@formatjs/intl-locale": "2.4.11",
+    "@formatjs/intl-numberformat": "6.1.1",
+    "@formatjs/intl-pluralrules": "4.0.1",
+    "css-loader": "3.2.0",
+    "es6-set": "0.1.5",
+    "eslint": "4.19.1",
+    "eslint-config-tui": "1.0.3",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-jasmine": "2.10.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "got": "11.8.2",
+    "handlebars": "4.7.6",
+    "handlebars-template-loader": "1.0.0",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "jasmine-core": "2.99.1",
+    "jsdoc": "3.5.5",
+    "karma": "6.3.14",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "2.0.0",
+    "karma-coverage": "2.0.3",
+    "karma-fixture": "0.2.6",
+    "karma-html2js-preprocessor": "1.1.0",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-ajax": "0.1.13",
+    "karma-jasmine-jquery-2": "0.1.1",
     "karma-json-fixtures-preprocessor": "0.0.6",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-preprocess-preprocessor": "^0.2.0",
-    "karma-sauce-launcher": "^1.2.0",
-    "karma-source-map-support": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-junit-reporter": "1.2.0",
+    "karma-preprocess-preprocessor": "0.2.0",
+    "karma-sauce-launcher": "1.2.0",
+    "karma-source-map-support": "1.3.0",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webdriver-launcher": "git+https://github.com/nhn/karma-webdriver-launcher.git#v1.2.0",
-    "karma-webpack": "^4.0.2",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "preprocess-loader": "^0.3.0",
-    "prettier": "^2.1.2",
-    "safe-umd-webpack-plugin": "^4.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "terser-webpack-plugin": "^2.3.5",
-    "tslint": "^5.12.0",
-    "tui-jsdoc-template": "^1.2.2",
-    "tui-release-notes": "git+https://github.com/nhn/toast-ui.release-notes.git#v1.0.1",
-    "typescript": "^3.2.1",
-    "url-loader": "^1.0.1",
-    "weakmap-polyfill": "^2.0.2",
-    "webpack": "^4.13.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.11.0"
+    "karma-webdriver-launcher": "https://github.com/nhn/karma-webdriver-launcher/archive/refs/tags/v1.2.0.tar.gz",
+    "karma-webpack": "4.0.2",
+    "mini-css-extract-plugin": "0.4.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "preprocess-loader": "0.3.0",
+    "prettier": "2.1.2",
+    "safe-umd-webpack-plugin": "4.0.0",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.2",
+    "terser-webpack-plugin": "2.3.5",
+    "tslint": "5.12.0",
+    "tui-jsdoc-template": "1.2.2",
+    "tui-release-notes": "https://github.com/nhn/toast-ui.release-notes/archive/refs/tags/v1.0.1.tar.gz",
+    "typescript": "3.2.1",
+    "url-loader": "1.0.1",
+    "weakmap-polyfill": "2.0.2",
+    "webpack": "4.13.0",
+    "webpack-cli": "3.0.8",
+    "webpack-dev-server": "3.11.0"
   },
   "scripts": {
     "test": "karma start --no-single-run",
@@ -103,9 +103,9 @@
     "publish:cdn": "node scripts/publishToCDN.js"
   },
   "dependencies": {
-    "dompurify": "^2.3.1",
-    "tui-code-snippet": "^1.5.0",
-    "tui-date-picker": "^4.3.0",
-    "tui-time-picker": "^2.1.4"
+    "dompurify": "2.3.1",
+    "tui-code-snippet": "1.5.0",
+    "tui-date-picker": "4.3.0",
+    "tui-time-picker": "2.1.4"
   }
 }
